fixed styling of btn-primary on firefox with lato font

--- a/themes/cpk-devel/less/cpk.less
+++ b/themes/cpk-devel/less/cpk.less
@@ -134,7 +134,6 @@ a:hover, a:focus, .btn-link:hover, .btn-link:focus {
 .btn-primary {
   font-family: LatoWebHeavy;
   text-transform: uppercase;
-  font-weight: bold;
 }
 
 .link {
